feat: Jigsaw with only Gradle