@@ -41,31 +41,85 @@ subprojects {
             }
         }
 
+
+        compileJava {
+            doFirst {
+                options.compilerArgs = [
+                        '--module-path', classpath.asPath,
+                ]
+                classpath = files()
+            }
+        }
+
+        javadoc {
+            inputs.property("moduleName", moduleName)
+            doFirst {
+                options.addStringOption('-module-path', classpath.asPath)
+            }
+        }
+
+
+
+
+        compileTestJava {
+            inputs.property("moduleName", moduleName)
+            doFirst {
+                options.compilerArgs = [
+                        '--module-path', classpath.asPath,
+                        '--add-modules', 'org.junit.jupiter.api',
+                        '--add-modules', 'feign.core',
+                        '--add-reads', "$moduleName=org.junit.jupiter.api",
+                        '--add-reads', "$moduleName=org.junit.platform.commons",
+                        '--add-reads', "$moduleName=feign.core",
+                        '--add-reads', "$moduleName=feign.gson",
+                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+                ]
+                classpath = files()
+            }
+        }
+
+
+
+
         test {
             useJUnitPlatform()
             environment "MARVEL", "JIGSAW"
             environment "HTTP", "JIGSAW"
+            beforeTest { descriptor ->
+                logger.lifecycle("Running test: " + descriptor)
 
+            }
+
+            inputs.property("moduleName", moduleName)
             doFirst {
                 // can't access to file in resources directory => copy to java classes directory
                 copy {
                     from "$projectDir/src/main/resources"
                     into "$buildDir/classes/java/main/"
                 }
+
+                jvmArgs = [
+                        //'--show-module-resolution',
+                        '--module-path', classpath.asPath,
+                        '--add-modules', 'ALL-MODULE-PATH',
+                        '--add-reads', "$moduleName=org.junit.jupiter.api",
+                        '--add-reads', "$moduleName=org.junit.platform.commons",
+                        '--add-reads', "$moduleName=feign.core",
+                        '--add-reads', "$moduleName=feign.gson",
+                        '--add-exports', "$moduleName/$moduleName=org.junit.jupiter.api",
+                        '--add-exports', "$moduleName/$moduleName=org.junit.platform.commons",
+                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
+                ]
+                classpath = files()
+
             }
 
-            // listen to events in the test execution lifecycle
-            beforeTest { descriptor ->
-                logger.lifecycle("Running test: " + descriptor)
-            }
-
-            // listen to standard out and standard error of the test JVM(s)
             onOutput { descriptor, event ->
                 logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message)
             }
-
         }
 
-
     }
+
+
 }
